Added Chart.js And the project should be finished RN

--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
         <!--- Jquery Ends --->
         <!-- ChartJS start -->
         <script
-            href="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.bundle.js"
+            src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.10/dist/chart.min.js"
+            integrity="sha256-QmLohaG/lbP8f/sq8YpLWCGKB1s7FuRDXJTARVnu514="
+            crossorigin="anonymous"
         ></script>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.css"
-        />
         <!-- ChartJS end -->
         <!-- CSS STARTS HERE --->
         <link
@@ -170,7 +168,57 @@
                 </div>
             </div>
         </nav>
+        <section class="hero">
+            <div class="hero-body" style="text-align: center">
+                <h1 class="title">What is your Favorite Browser</h1>
+                <h2 class="subtitle">Total Vote Count: 800</h2>
+                <div class="container">
+                    <div id="canvas-holder">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <script type="text/javascript">
+            let labels1 = [];
+            let data1 = [];
+            let option1 = 'Firefox';
+            let option2 = 'Chrome';
+            let option3 = 'IE';
+            let option4 = 'Safari';
+            labels1.push(option1);
+            labels1.push(option2);
+            labels1.push(option3);
+            labels1.push(option4);
+            let option1_count = '100';
+            let option2_count = '200';
+            let option3_count = '300';
+            let option4_count = '200';
+            data1.push(option1_count);
+            data1.push(option2_count);
+            data1.push(option3_count);
+            data1.push(option4_count);
+
+            let colors1 = ['#49A9EA', '#36CAAB', '#534275', '#c9ae9f'];
+            let myChart = document.getElementById('myChart').getContext('2d');
+            let chart1 = new Chart(myChart, {
+                type: 'doughnut',
+                data: {
+                    labels: labels1,
+                    datasets: [
+                        {
+                            data: data1,
+                            backgroundColor: colors1,
+                        },
+                    ],
+                },
+                options: {
+                    // responsive: true,
+                    maintainAspectRatio: false,
+                },
+            });
+        </script>
         <!-- NAVBAR ENDS HERE -->
         <footer class="footer">
             <div class="content has-text-centered">
